--- a/BikeSharingPrediction_code.html
+++ b/BikeSharingPrediction_code.html
@@ -221,7 +221,7 @@ $(document).ready(function () {
 
 <p>NAME: Elisa Pirotta</p>
 <p>BADGE: 791877</p>
-<p>NICKNAME: e.pirotta2</p>
+<p>NICKNAME: Elisa Pirotta</p>
 <p>TEAM: Derek</p>
 <p>ROUND: 1st</p>
 <div id="references" class="section level3">
